Better organized sign-in and sign-off distinguishing those who need to audit from those who only need to sign off.